# PDF_Summarizer

./: .env  pyproject.toml
app/: app.py
config/: model_config.yaml
llm/: summarizer.py
notion/: notion_client.py
notion_client/: notion_client.py
src/: main.py  pdf_processor.py  summarizer.py
