[project]
name = "pdf-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-genai>=1.46.0",
    "notion-client>=2.6.0",
    "pymupdf>=1.26.5",
    "streamlit>=1.50.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
]
